// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel adds punctuation to requirementLabel when hint is also present 1`] = `
<label
  class="ds-c-label"
>
  Hello world
</label>
`;

exports[`FormLabel is inversed 1`] = `
<div
  class="ds-c-field__hint ds-c-field__hint--inverse"
>
  Foo
</div>
`;

exports[`FormLabel renders as a legend element 1`] = `
<legend
  class="ds-c-label"
>
  Hello world
</legend>
`;

exports[`FormLabel renders label text 1`] = `
<label
  class="ds-c-label"
  for="name"
>
  Hello world
</label>
`;

exports[`FormLabel renders requirementLabel 1`] = `
<label
  class="ds-c-label"
>
  Hello world
</label>
`;

exports[`FormLabel supports additional attributes 1`] = `
<label
  aria-label="testing aria"
  class="ds-c-label ds-u-foo"
>
  Hello world
</label>
`;
